SONARPY-1545 Rule S5659: Add support for python-jose